# Training-_spring_leg_stoch

./: README.md
Trajectory_Generation/ARS/: README.md  ars_multi.py  command.txt  elipse_a1.npy  elipse_desired.npy  elipse_observed.npy  fr_trajectory.npy  fr_trajectory1.npy  full_bezier_actual.npy  full_bezier_actual_sat10.npy  full_bezier_desired.npy  full_bezier_observed.npy  highPTraj.npy  plotfootTraj.py  roll_pitch_data_trained.npy  test_indv_policy.py  test_policy.py  test_policy_store_bezier.py
Trajectory_Generation/envs/stoch_two__abduction_spring_urdf/: CMakeLists.txt  package.xml
Trajectory_Generation/envs/stoch_two__abduction_spring_urdf/config/: joint_names_stoch_two__abduction_spring_urdf.yaml
Trajectory_Generation/envs/stoch_two__abduction_spring_urdf/launch/: display.launch  gazebo.launch
Trajectory_Generation/envs/stoch_two__abduction_spring_urdf/meshes/: back_left_abd_link.STL  back_right_abd_link.STL  bl_lower_hip_link.STL  bl_lower_knee_link.STL  bl_upper_hip_link.STL  bl_upper_knee_link.STL  br_lower_hip_link.STL  br_lower_knee_link.STL  br_upper_hip_link.STL  br_upper_knee_link.STL  fl_lower_hip_link.STL  fl_lower_knee_link.STL  fl_upper_hip_link.STL  fl_upper_knee_link.STL  fr_lower_hip_link.STL  fr_lower_knee_link.STL  fr_upper_hip_link.STL  fr_upper_knee_link.STL  front_body_link.STL  front_left_abd_link.STL  front_right_abd_link.STL  spring_bl.STL  spring_br.STL  spring_fl.STL  spring_fr.STL
Trajectory_Generation/envs/stoch_two__abduction_spring_urdf/urdf/: stoch_two__abduction_spring_urdf.csv  stoch_two__abduction_spring_urdf.urdf
(+1396 files in other folders)
